mostly convention updates

--- a/docs/conventions/standard_name_convention.ipynb
+++ b/docs/conventions/standard_name_convention.ipynb
@@ -119,8 +119,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_wind6091677600\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_wind6091677600\">\n",
+       "        <input id=\"group-x_wind5823592400\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_wind5823592400\">\n",
        "        x_wind</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : \"x\" indicates a vector component along the grid x-axis, positive with increasing x. Wind is defined as a two-dimensional (horizontal) air velocity vector, with no vertical component. (Vertical motion in the atmosphere has the standard name upward_air_velocity.).</li>      </il>\n",
@@ -449,8 +449,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_velocity6244176100\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_velocity6244176100\">\n",
+       "        <input id=\"group-x_velocity5976492300\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_velocity5976492300\">\n",
        "        x_velocity</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -491,8 +491,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-derivative_of_x_velocity_wrt_x_coordinate6262318700\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-derivative_of_x_velocity_wrt_x_coordinate6262318700\">\n",
+       "        <input id=\"group-derivative_of_x_velocity_wrt_x_coordinate5993278300\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-derivative_of_x_velocity_wrt_x_coordinate5993278300\">\n",
        "        derivative_of_x_velocity_wrt_x_coordinate</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : 1/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Derivative of x_velocity with respect to x_coordinate. Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector. Coordinate refers to the spatial coordinate. Coordinate is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -523,8 +523,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-square_of_static_pressure6274985700\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-square_of_static_pressure6274985700\">\n",
+       "        <input id=\"group-square_of_static_pressure6008517900\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-square_of_static_pressure6008517900\">\n",
        "        square_of_static_pressure</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : Pa**2</li>           <li style=\"list-style-type: none; font-style: italic\">description : Square of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.</li>      </il>\n",
@@ -555,8 +555,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-arithmetic_mean_of_static_pressure6287522900\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-arithmetic_mean_of_static_pressure6287522900\">\n",
+       "        <input id=\"group-arithmetic_mean_of_static_pressure6022094700\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-arithmetic_mean_of_static_pressure6022094700\">\n",
        "        arithmetic_mean_of_static_pressure</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : Pa</li>           <li style=\"list-style-type: none; font-style: italic\">description : Arithmetic mean of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.</li>      </il>\n",
@@ -598,7 +598,7 @@
        "\u001b[1mConvention(\"standard name convention\")\u001b[0m\n",
        "contact: https://orcid.org/0000-0001-8729-0482\n",
        "  File.__init__():\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x0000018A020F88B0>):\n",
+       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x0000023BEFD70C10>):\n",
        "\t\tThe standard name table of the convention.\n",
        "  Group.create_dataset():\n",
        "    * \u001b[1munits\u001b[0m:\n",
@@ -716,8 +716,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_velocity6377504600\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_velocity6377504600\">\n",
+       "        <input id=\"group-x_velocity6126460000\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_velocity6126460000\">\n",
        "        x_velocity</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -957,17 +957,17 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--6417495300\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--6417495300\">\n",
+       "                        <input id=\"group-ds--6167585900\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--6167585900\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8rc1</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 10.5281/zenodo.8276716)</li></li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8rc2</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 10.5281/zenodo.8276716)</li></li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-6420501000\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/u-6420503800\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/u-6420503800\">u</label>\n",
+       "                <ul id=\"ds-1-/u-6170971600\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/u-6170976600\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/u-6170976600\">u</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : km/s</li>\n",
        "                </ul>\n",
