add docstrings, cleaning up and update zenodo_search dep

--- a/docs/conventions/standard_name_convention.ipynb
+++ b/docs/conventions/standard_name_convention.ipynb
@@ -7,9 +7,11 @@
    "source": [
     "# Standard Name Convention\n",
     "\n",
-    "The \"Standard Name Convention\" is one realization of a convention promoted by the toolbox. The key standard attributes are \n",
+    "The \"Standard Name Convention\" is one realization of a convention promoted by the toolbox. It is based on the idea, that every dataset must have a physical unit (or none if it is dimensionless) and that datasets must be identifiable via an identifier attribute rather than the dataset name itself.\n",
     "\n",
-    " - `standard_name`: A human- and machine-readable standardized name (identifier) of a dataset based on construction rules and documented in a \"Standard name table\",\n",
+    "The key standard attributes are \n",
+    "\n",
+    " - `standard_name`: A human- and machine-readable dataset identifier based on construction rules and listed in a \"Standard Name Table\",\n",
     " - `standard_name_table`: List of `standard_name` together with the base unit (SI) and a comprehensive description. It also includes additional information about how a `standard_name` can be transformed into a new `standard_name`\n",
     " - `units`: The unit attribute of a dataset. Must not be SI-unit, but must be convertible to it and then match the registered SI-unit in the Standard name table,\n",
     " - `long_name`: An alternative name if no `standard_name` is applicable."
@@ -20,17 +22,12 @@
    "id": "3c8617b6-48de-4065-84b9-022a3b0dff7b",
    "metadata": {},
    "source": [
-    "## Concept and its implications\n",
-    "The concept behind it is quite simple:\n",
-    "- The standard name is a human-readable (of course) and interpretable identifier of the dataset. This means, the content of the dataset can be interpreted by the standard_name alone.\n",
-    "- A further description can be found in the so-called \"Standard Name table\". It is a table with all allowed standard names, their description *and* physical unit. The later must be provided with the dataset, too.\n",
-    "\n",
-    "This concept is first introduced by the climate and forecast community and is called [CF-convention](http://cfconventions.org/). The `h5RDMtoolbox` adopts the concept and implemented a general version of the concept, so users can define their own discipline- or problem-specific standard name convention.\n",
+    "This concept is first introduced by the Climate and Forecast community and is called [CF-convention](http://cfconventions.org/). The `h5RDMtoolbox` adopts the concept and implements a general version of it, so that users can define their own discipline- or problem-specific standard name convention.\n",
     "\n",
     "Main benefits of the convention are:\n",
-    "- Human and machine interpretation of dataset content,\n",
-    "- validation of dataset identifiers (standard_name) and their units\n",
-    "- unit-aware processing of data.\n",
+    "- achieving self-describing files, which are human and machine interpretation interpretable,\n",
+    "- validating correctness of dataset identifiers (standard_name) and their units\n",
+    "- allowing unit-aware processing of data.\n",
     "\n",
     "This chapter walks you through the concept and shows how to apply it"
    ]
@@ -62,7 +59,7 @@
    "id": "c82acdaa-9075-4c3d-a511-d8c7fc6f36e5",
    "metadata": {},
    "source": [
-    "## Example 1: cf-convention"
+    "### Example 1: cf-convention"
    ]
   },
   {
@@ -96,7 +93,8 @@
     }
    ],
    "source": [
-    "cf = StandardNameTable.from_web(\"https://cfconventions.org/Data/cf-standard-names/79/src/cf-standard-name-table.xml\")\n",
+    "cf = StandardNameTable.from_web(\"https://cfconventions.org/Data/cf-standard-names/79/src/cf-standard-name-table.xml\",\n",
+    "                               known_hash='4c29b5ad70f6416ad2c35981ca0f9cdebf8aab901de5b7e826a940cf06f9bae4')\n",
     "cf"
    ]
   },
@@ -119,8 +117,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_wind5823592400\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_wind5823592400\">\n",
+       "        <input id=\"group-x_wind6743998400\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_wind6743998400\">\n",
        "        x_wind</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : \"x\" indicates a vector component along the grid x-axis, positive with increasing x. Wind is defined as a two-dimensional (horizontal) air velocity vector, with no vertical component. (Vertical motion in the atmosphere has the standard name upward_air_velocity.).</li>      </il>\n",
@@ -302,7 +300,7 @@
        "    <tr>\n",
        "      <th>time</th>\n",
        "      <td>s</td>\n",
-       "      <td>Time refers tothe relative time since start of data aquisition.</td>\n",
+       "      <td>Time refers to the relative time since start of data acquisition.</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -449,8 +447,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_velocity5976492300\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_velocity5976492300\">\n",
+       "        <input id=\"group-x_velocity6901174600\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_velocity6901174600\">\n",
        "        x_velocity</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -491,8 +489,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-derivative_of_x_velocity_wrt_x_coordinate5993278300\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-derivative_of_x_velocity_wrt_x_coordinate5993278300\">\n",
+       "        <input id=\"group-derivative_of_x_velocity_wrt_x_coordinate6915942500\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-derivative_of_x_velocity_wrt_x_coordinate6915942500\">\n",
        "        derivative_of_x_velocity_wrt_x_coordinate</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : 1/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Derivative of x_velocity with respect to x_coordinate. Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector. Coordinate refers to the spatial coordinate. Coordinate is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -523,8 +521,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-square_of_static_pressure6008517900\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-square_of_static_pressure6008517900\">\n",
+       "        <input id=\"group-square_of_static_pressure6928502900\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-square_of_static_pressure6928502900\">\n",
        "        square_of_static_pressure</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : Pa**2</li>           <li style=\"list-style-type: none; font-style: italic\">description : Square of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.</li>      </il>\n",
@@ -555,8 +553,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-arithmetic_mean_of_static_pressure6022094700\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-arithmetic_mean_of_static_pressure6022094700\">\n",
+       "        <input id=\"group-arithmetic_mean_of_static_pressure6942426400\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-arithmetic_mean_of_static_pressure6942426400\">\n",
        "        arithmetic_mean_of_static_pressure</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : Pa</li>           <li style=\"list-style-type: none; font-style: italic\">description : Arithmetic mean of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.</li>      </il>\n",
@@ -598,7 +596,7 @@
        "\u001b[1mConvention(\"standard name convention\")\u001b[0m\n",
        "contact: https://orcid.org/0000-0001-8729-0482\n",
        "  File.__init__():\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x0000023BEFD70C10>):\n",
+       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x000001EA17F13AC0>):\n",
        "\t\tThe standard name table of the convention.\n",
        "  Group.create_dataset():\n",
        "    * \u001b[1munits\u001b[0m:\n",
@@ -716,8 +714,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_velocity6126460000\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_velocity6126460000\">\n",
+       "        <input id=\"group-x_velocity7033832100\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_velocity7033832100\">\n",
        "        x_velocity</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -957,17 +955,17 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--6167585900\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--6167585900\">\n",
+       "                        <input id=\"group-ds--7067746600\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--7067746600\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8rc2</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 10.5281/zenodo.8276716)</li></li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0rc4</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 10.5281/zenodo.8276716)</li></li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-6170971600\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/u-6170976600\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/u-6170976600\">u</label>\n",
+       "                <ul id=\"ds-1-/u-7081563600\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/u-7081566900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/u-7081566900\">u</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : km/s</li>\n",
        "                </ul>\n",
