bugfix reopening file with existing standard attributes

--- a/docs/conventions/standard_attributes_and_conventions.ipynb
+++ b/docs/conventions/standard_attributes_and_conventions.ipynb
@@ -396,42 +396,27 @@
        "    white-space: nowrap;\r\n",
        "}\r\n",
        "\r\n",
-       "\r\n",
-       ".h5tb-unit {\r\n",
-       "    width: 96px;\r\n",
-       "    white-space: nowrap;\r\n",
-       "    padding-right: 2px;\r\n",
-       "    text-align: right;\r\n",
-       "    color: #555;\r\n",
-       "    font-style: italic;\r\n",
-       "}\r\n",
-       "\r\n",
        ".h5tb-attr-list {\r\n",
        "    list-style: none;\r\n",
-       "    background-color: #fff;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "    padding-bottom: 6px;\r\n",
-       "    color: #555;\r\n",
+       "    color: #6a6c73;\r\n",
        "}\r\n",
        "\r\n",
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
-       "    background-color: #fff;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-highlight {\r\n",
-       "    background-color: rgba(3, 169, 244, .2);\r\n",
-       "    cursor: pointer;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4924052700\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4924052700\">\n",
+       "                        <input id=\"group-ds--6437083500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--6437083500\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8rc2</li><li style=\"list-style-type: none; font-style: italic\">data_type : numerical</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.2</li><li style=\"list-style-type: none; font-style: italic\">data_type : numerical</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -452,6 +437,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "461cd227-2da8-4190-80b7-ce8b540b9a69",
+   "metadata": {},
+   "source": [
+    "Note, that if we were to reopen the file not in read-only (r) but in read-write mode, then the standard attributes which already exist are not checked again. So if the HDF5 was written with another package, e.g. h5py, then the value might be wrong:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9c650b79-48e6-4b30-8423-ef16bf47d829",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.File(name=h5.hdf_filename, mode='r+') as h5:\n",
+    "    pass # note, that we were not required to pass \"data_type\" as it was present already!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d84944e6-3b34-487d-93a0-be05d8978345",
    "metadata": {},
    "source": [
@@ -460,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "599c91e0-fded-4cf7-9706-d5dbf1eddb65",
    "metadata": {},
    "outputs": [],
@@ -480,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a709898e-5bac-4773-8dac-500210c962ba",
    "metadata": {},
    "outputs": [
@@ -494,7 +498,7 @@
        "\t\tType of data in file. Can be numerical or experimental."
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "cdfebdc5-3cd1-41c6-a370-ae1b884d9960",
    "metadata": {},
    "outputs": [
@@ -686,42 +690,27 @@
        "    white-space: nowrap;\r\n",
        "}\r\n",
        "\r\n",
-       "\r\n",
-       ".h5tb-unit {\r\n",
-       "    width: 96px;\r\n",
-       "    white-space: nowrap;\r\n",
-       "    padding-right: 2px;\r\n",
-       "    text-align: right;\r\n",
-       "    color: #555;\r\n",
-       "    font-style: italic;\r\n",
-       "}\r\n",
-       "\r\n",
        ".h5tb-attr-list {\r\n",
        "    list-style: none;\r\n",
-       "    background-color: #fff;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "    padding-bottom: 6px;\r\n",
-       "    color: #555;\r\n",
+       "    color: #6a6c73;\r\n",
        "}\r\n",
        "\r\n",
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
-       "    background-color: #fff;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-highlight {\r\n",
-       "    background-color: rgba(3, 169, 244, .2);\r\n",
-       "    cursor: pointer;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4970560900\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4970560900\">\n",
+       "                        <input id=\"group-ds--6542703300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--6542703300\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8rc2</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.2</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -743,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "79efb889-ff4c-4b8e-99a9-782d3bd4a4f5",
    "metadata": {},
    "outputs": [
@@ -765,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "73415654-05b1-4d85-a8f5-51398fdd7b93",
    "metadata": {},
    "outputs": [],
@@ -790,17 +779,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "b37888a9-c963-420a-b40b-45495212721b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['$none', '$datetime', '$type', '$in', '$orcid', '$quantity', '$units', '$ref', '$url', '$bibtex', '$minlength', '$maxlength', '$regex', '$standard_name', '$standard_name_table'])"
+       "dict_keys(['$none', '$datetime', '$type', '$in', '$orcid', '$quantity', '$offset', '$units', '$ref', '$url', '$bibtex', '$minlength', '$maxlength', '$regex', '$standard_name', '$standard_name_table'])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "0641aa3c-152f-4f78-81b3-c6ddf4e9e531",
    "metadata": {
     "scrolled": true
@@ -839,7 +828,7 @@
        "\t\tType of data in file. Can be numerical, analytical or experimental.\n",
        "    * \u001b[1mcontact\u001b[0m:\n",
        "\t\tContact or responsible person for the full file. Contact is represented by an ORCID.\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x000002A75149B730>):\n",
+       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x000001F7E5BD23A0>):\n",
        "\t\tThe standard name table of the convention.\n",
        "    * \u001b[3mcomment\u001b[0m (default=None):\n",
        "\t\tComment describes the file content in more detail.\n",
@@ -863,7 +852,7 @@
        "\t\tWeb resources servering as references for the group."
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "bff929ab-d133-48bd-8c16-b7bd3080a426",
    "metadata": {},
    "outputs": [
@@ -895,7 +884,7 @@
        "<StandardAttribute[positional](\"standard_name\"): \"Standard name of the dataset. If not set, the long_name attribute must be given.\">"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "7f2295ae-7b1f-431f-8168-cf340b80adc2",
    "metadata": {},
    "outputs": [
@@ -965,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "a0b03b0c-8d48-46d3-8c0e-98d5dc758650",
    "metadata": {},
    "outputs": [
@@ -975,7 +964,7 @@
        "using(\"h5py\")"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
